--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -43,9 +43,11 @@
                     font-size: 18px;
                     margin-right: 5px;
                 }
-                span {
+                span,a {
                     font-size: 15px;
                     font-weight: 500;
+                    text-decoration: none;
+                    color: inherit;
                 }
                 @include mobile{
                     display: none;
