--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -79,6 +79,7 @@
                         img{
                             padding: 20px;
                             object-fit: cover;
+                            width: 100%;
                         }
                     }
                     .leftItem{
